// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Dropdown should highlight button class when style equals highlight 1`] = `
<div
  className="lego-dropdown-group"
  data-ui-component={true}
  style={
    Object {
      "width": 200,
    }
  }
>
  <button
    className="oui-button oui-button--highlight"
    disabled={false}
    style={
      Object {
        "marginBottom": 2,
      }
    }
  >
    <div
      className="flex"
    >
      <div
        className="flex--1 truncate"
      >
        Dropdown
      </div>
      <div
        className="text--right"
      >
        <span
          className="push-half--left oui-arrow-inline--down"
        />
      </div>
    </div>
  </button>
</div>
`;

exports[`components/Dropdown should not render children when isDisabled is true 1`] = `
<div
  className="lego-dropdown-group"
  data-ui-component={true}
  style={
    Object {
      "width": 200,
    }
  }
>
  <button
    className="oui-button"
    disabled={false}
    style={
      Object {
        "marginBottom": 2,
      }
    }
  >
    <div
      className="flex"
    >
      <div
        className="flex--1 truncate"
      >
        Dropdown
      </div>
      <div
        className="text--right"
      >
        <span
          className="push-half--left lego-arrow-inline--down"
        />
      </div>
    </div>
  </button>
</div>
`;

exports[`components/Dropdown should not render children when isOpen is false 1`] = `
<div
  className="lego-dropdown-group"
  data-ui-component={true}
  style={
    Object {
      "width": 200,
    }
  }
>
  <button
    className="oui-button"
    disabled={false}
    style={
      Object {
        "marginBottom": 2,
      }
    }
  >
    <div
      className="flex"
    >
      <div
        className="flex--1 truncate"
      >
        Dropdown
      </div>
      <div
        className="text--right"
      >
        <span
          className="push-half--left lego-arrow-inline--down"
        />
      </div>
    </div>
  </button>
</div>
`;

exports[`components/Dropdown should not use .oui-arrow-inline--down when icon isEqual to triangle 1`] = `
<div
  className="lego-dropdown-group"
  data-ui-component={true}
  style={
    Object {
      "width": 200,
    }
  }
>
  <button
    className="oui-button"
    disabled={false}
    style={
      Object {
        "marginBottom": 2,
      }
    }
  >
    <div
      className="flex"
    >
      <div
        className="flex--1 truncate"
      >
        Dropdown
      </div>
      <div
        className="text--right"
      >
        <span
          className="push-half--left oui-arrow-inline--down"
        />
      </div>
    </div>
  </button>
</div>
`;

exports[`components/Dropdown should render children when isOpen is true 1`] = `
<div
  className="lego-dropdown-group"
  data-ui-component={true}
  style={
    Object {
      "width": 200,
    }
  }
>
  <button
    className="oui-button"
    disabled={false}
    style={
      Object {
        "marginBottom": 2,
      }
    }
  >
    <div
      className="flex"
    >
      <div
        className="flex--1 truncate"
      >
        Dropdown
      </div>
      <div
        className="text--right"
      >
        <span
          className="push-half--left lego-arrow-inline--down"
        />
      </div>
    </div>
  </button>
  <ul>
    <li>
      Manual
    </li>
    <li>
      Maximize Conventions
    </li>
    <li>
      Faster Results
    </li>
  </ul>
</div>
`;

exports[`components/Dropdown should use oui-button--full class when fullWidth is true 1`] = `
<div
  className="lego-dropdown-group"
  data-ui-component={true}
  style={
    Object {
      "width": 200,
    }
  }
>
  <button
    className="oui-button oui-button--full soft--left text--left"
    disabled={false}
    style={
      Object {
        "marginBottom": 2,
      }
    }
  >
    <div
      className="flex"
    >
      <div
        className="flex--1 truncate"
      >
        Dropdown
      </div>
      <div
        className="text--right"
      >
        <span
          className="push-half--left oui-arrow-inline--down"
        />
      </div>
    </div>
  </button>
</div>
`;
